@@ -21,10 +21,10 @@
 (define-structure sawfish.wm.edge.util
 
     (compound-interface
-      (structure-interface sawfish.wm.edge.subrs)
-      (export flippers-activate
-	      get-active-corner
-	      get-active-edge))
+     (structure-interface sawfish.wm.edge.subrs)
+     (export flippers-activate
+	     get-active-corner
+	     get-active-edge))
 
     (open rep
 	  rep.system
@@ -45,9 +45,9 @@
 	    (add-hook 'randr-change-notify-hook recreate-flippers)))
       (disable-flippers)
       (if (in-hook-p 'after-restacking-hook flippers-after-restacking)
-	(remove-hook 'after-restacking-hook flippers-after-restacking))
+	  (remove-hook 'after-restacking-hook flippers-after-restacking))
       (if (in-hook-p 'randr-change-notify-hook recreate-flippers)
-	(remove-hook 'randr-change-notify-hook recreate-flippers))))
+	  (remove-hook 'randr-change-notify-hook recreate-flippers))))
 
   (defcustom hot-spots-area 50
     "Lenght in px (in both x and y direction) wich is used as hot-spots-area."
@@ -55,37 +55,37 @@
     :range (5 . 500)
     :group edge-actions)
 
-   (define (get-active-corner)
+  (define (get-active-corner)
     (let ((cursor-x (car (query-pointer)))
 	  (cursor-y (cdr (query-pointer))))
       (cond ((or (and (< cursor-x hot-spots-area)
-		    (<= cursor-y 1))
+		      (<= cursor-y 1))
 		 (and (<= cursor-x 1)
-		    (< cursor-y hot-spots-area)))
-		   'top-left)
+		      (< cursor-y hot-spots-area)))
+	     'top-left)
 
 	    ((or (and (> cursor-x (- (screen-width) hot-spots-area))
-		    (<= cursor-y 1))
+		      (<= cursor-y 1))
 		 (and (>= cursor-x (- (screen-width) 1))
-		    (< cursor-y hot-spots-area)))
-		   'top-right)
+		      (< cursor-y hot-spots-area)))
+	     'top-right)
 
 	    ((or (and (> cursor-x (- (screen-width) hot-spots-area))
-		    (>= cursor-y (- (screen-height) 1)))
+		      (>= cursor-y (- (screen-height) 1)))
 		 (and (>= cursor-x (- (screen-width) 1))
-		    (> cursor-y (- (screen-height) hot-spots-area))))
-		   'bottom-right)
+		      (> cursor-y (- (screen-height) hot-spots-area))))
+	     'bottom-right)
 
 	    ((or (and (< cursor-x hot-spots-area)
-		    (>= cursor-y (- (screen-height) 1)))
+		      (>= cursor-y (- (screen-height) 1)))
 		 (and (<= cursor-x 1)
-		    (> cursor-y (- (screen-height) hot-spots-area))))
-		   'bottom-left))))
+		      (> cursor-y (- (screen-height) hot-spots-area))))
+	     'bottom-left))))
 
   (define (get-active-edge)
     (let ((cursor (query-pointer)))
       (cond ((zerop (car cursor))
-	      'left)
+	     'left)
 	    ((= (car cursor) (1- (screen-width)))
 	     'right)
 	    ((zerop (cdr cursor))
