@@ -1,27 +1,21 @@
 ;; viewport-drag.jl -- Smooth viewport motion with mouse
 
-;; Copyright (C) 2008 David T. McWherter <udmcwher@mcs.drexel.edu>
+;; Originally written by David T. McWherter <udmcwher@mcs.drexel.edu>
+
 ;; Copyright (C) 2010 Christopher Roy Bratusek <zanghar@freent.de>
 
 ;; This file is part of sawfish.
+
+;; viewport-drag is public domain. It's free in any mean for anyone.
 
 ;; sawfish is free software; you can redistribute it and/or modify it
 ;; under the terms of the GNU General Public License as published by
 ;; the Free Software Foundation; either version 2, or (at your option)
 ;; any later version.
 
-;; sawfish is distributed in the hope that it will be useful, but
-;; WITHOUT ANY WARRANTY; without even the implied warranty of
-;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-;; GNU General Public License for more details.
-
-;; You should have received a copy of the GNU General Public License
-;; along with sawfish; see the file COPYING.  If not, write to
-;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
-
 (define-structure sawfish.wm.edge.viewport-drag
 
-    (export viewport-drag-activate)
+    (export viewport-drag-invoke)
 
     (open rep
           rep.system
@@ -33,18 +27,19 @@
   (define-structure-alias viewport-drag sawfish.wm.edge.viewport-drag)
 
   (defcustom viewport-drag-distance 64
-    "Amount to drag the viewport when the pointer hits the screen edge."
+    "Amount to drag the viewport (in pixel) each time the pointer hits the
+screen edge."
     :group edge-actions
     :type number
     :range (1 . nil))
 
   (defcustom viewport-drag-cursor-distance 32
-    "Amount to pull back the cursor after dragging the viewport."
+    "Amount to pull back the cursor (in pixer) after dragging the viewport."
     :group edge-actions
     :type number
     :range (1 . nil))
 
-  (define (viewport-drag-right)
+  (define (drag-right)
     "Shifts the viewport `viewport-drag-distance' pixels to the right."
     (let ((dist viewport-drag-distance)
           (cdist viewport-drag-cursor-distance)
@@ -56,7 +51,7 @@
       (set-viewport (+ viewport-x-offset dist) viewport-y-offset)
       (move-cursor (- (min dist cdist)) 0)))
 
-  (define (viewport-drag-left)
+  (define (drag-left)
     "Shifts the viewport `viewport-drag-distance' pixels to the left."
     (let ((dist (- viewport-drag-distance))
           (cdist (- viewport-drag-cursor-distance))
@@ -68,7 +63,7 @@
       (set-viewport (+ viewport-x-offset dist) viewport-y-offset)
       (move-cursor (- (max dist cdist)) 0)))
 
-  (define (viewport-drag-top)
+  (define (drag-up)
     "Shifts the viewport `viewport-drag-distance' pixels up."
     (let ((dist (- viewport-drag-distance))
           (cdist (- viewport-drag-cursor-distance))
@@ -80,7 +75,7 @@
       (set-viewport viewport-x-offset (+ viewport-y-offset dist))
       (move-cursor 0 (- (max dist cdist)))))
 
-  (define (viewport-drag-bottom)
+  (define (drag-down)
     "Shifts the viewport `viewport-drag-distance' pixels down."
     (let ((dist viewport-drag-distance)
           (cdist viewport-drag-cursor-distance)
@@ -92,10 +87,9 @@
       (set-viewport viewport-x-offset (+ viewport-y-offset dist))
       (move-cursor 0 (- (min dist cdist)))))
 
-  (define (viewport-drag-activate edge)
-    "Called when a desktop flipper is triggered to shift the visible desktop."
+  (define (viewport-drag-invoke edge)
     (case edge
-      ((left) (viewport-drag-left))
-      ((top) (viewport-drag-top))
-      ((right) (viewport-drag-right))
-      ((bottom) (viewport-drag-bottom)))))
+      ((left) (drag-left))
+      ((top) (drag-up))
+      ((right) (drag-right))
+      ((bottom) (drag-down)))))
